feat: adiciona rota patch para atualizar lead
